# cspnetwork

./: .gitignore  CMakeLists.txt  IMPORTANTE.md  Makefile  UDP_TUNNEL_IMPLEMENTATION_TASKLIST.md  cliente_ipv6.cspvpn  cliente_local.cspvpn  cliente_teste.cspvpn  enigmaweb-hash.cspvpn  enigmaweb-numeric.cspvpn  enigmaweb.cspvpn  fix_config_path.sh  test_compatibility  test_compatibility.cpp  test_fake_server.cspvpn  test_final_compatibility.cpp  test_fixed_sha256_compatibility  test_fixed_sha256_compatibility.cpp  test_generator_debug  test_generator_debug.cpp  test_ipv6_simple  test_ipv6_simple.cpp  test_reverse_engineer  test_reverse_engineer.cpp  test_seed_finder.cpp  test_seeds  test_seeds.cpp  test_sha256_compatibility  test_sha256_compatibility.cpp  vpn_client_full.cpp
config/: client.cspvpn  client.yaml  client_ipv6.cspvpn  default.yaml  fake_server.cspvpn  seeded_ipv6.yaml  test_local.yaml
include/application/: client_generator.h  cspnetwork_client.h  services.h  services_simple.h  use_cases.h  vpn_client.h
include/domain/: connection_context.h  cspnetwork_config.h  entities_backup.h  interfaces.h  types.h
include/infrastructure/: advanced_seed_manager.h  async_socket_manager.h  cache_manager.h  cache_manager.inl  config_manager.h  connection_seeder.h  crc32.h  cspnetwork_protocol.h  error_handler.h  ip_pool.h  ipv6_address_manager.h  ipv6_seeded_generator.h  logger.h  memory_pool_manager.h  memory_pool_manager.inl  monitoring_system.h  packet_processing_pipeline.h  repositories.h  security.h  seed_generator.h  seeded_connection_manager.h  seeded_router.h  seeded_system_monitor.h  thread_management.h  thread_management.inl  tun_interface.h  tunnel_packet.h
include/presentation/: cli.h  container.h  factory.h  server.h  udp_tunnel_server.h
include/protocol/: udp_tunnel_protocol.h
include/testing/: test_framework.h
mindvoices/: README.md  client_test.cpp  test_cspnetwork_compatibility  test_cspnetwork_compatibility.cpp  test_ipv6_compatibility  test_ipv6_compatibility.cpp  test_seed_finder  test_seed_finder.cpp  verify_ipv6  verify_ipv6.cpp
scripts/: build.sh  deploy.sh  generate_config.sh  install.sh  uninstall.sh
services/: csp-network.service
src/: client_main.cpp  generator_main.cpp  main.cpp
src/application/: client_generator.cpp  cspnetwork_client.cpp  services.cpp  use_cases.cpp  vpn_client.cpp  vpn_client_old.cpp  vpn_client_simple.cpp  vpn_client_simple_tun.cpp
src/domain/: connection_context.cpp  cspnetwork_config.cpp  entities.cpp  vpn_config.cpp
src/infrastructure/: advanced_seed_manager.cpp  async_socket_manager.cpp  cache_manager.cpp  config_manager.cpp  connection_seeder.cpp  crc32.cpp  cspnetwork_protocol.cpp  error_handler.cpp  ip_pool.cpp  ipv6_address_manager.cpp  ipv6_seeded_generator.cpp  monitoring_system.cpp  packet_processing_pipeline.cpp  repositories.cpp  security.cpp  seed_generator.cpp  seeded_connection_manager.cpp  seeded_router.cpp  seeded_system_monitor.cpp  thread_management.cpp  tun_interface.cpp  vpn_protocol.cpp
src/presentation/: cli.cpp  container.cpp  factory.cpp  server.cpp  udp_tunnel_server.cpp
src/protocol/: tunnel_packet.cpp  udp_tunnel_protocol.cpp
src/testing/: test_runner.cpp
tests/: test_main.cpp
tests/integration/: integration_tests.cpp
tests/performance/: performance_tests.cpp
tests/unit/: domain_tests.cpp  infrastructure_tests.cpp
